--- a/src/app/pages/cd-list/cd-list.page.html
+++ b/src/app/pages/cd-list/cd-list.page.html
@@ -1,9 +1,27 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>CdList</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Cds</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item *ngFor="let cd of cds" (click)="showDetails(cd)">
+      <ion-avatar slot="start">
+        <img [src]="cd.picture">
+      </ion-avatar>
+      <ion-label>
+        <h2>
+          {{ cd.name }}
+          <ion-badge [color]="cd.lent ? 'danger' : 'success'">
+            {{ cd.lent ? 'prêté' : 'dispo' }}
+          </ion-badge>
+        </h2>
+        <h3>{{ cd.artist }}</h3>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
