--- a/src/app/pages/lend-cd/lend-cd.page.html
+++ b/src/app/pages/lend-cd/lend-cd.page.html
@@ -1,9 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>LendCd</ion-title>
+    <ion-title>
+      {{ cd.name }}
+      -
+      {{ cd.artist }}
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-button [disabled]="false === cd.lent" (click)="action(false)">Rendre</ion-button>
+  <ion-button [disabled]="true === cd.lent" (click)="action(true)">Prêter</ion-button>
 </ion-content>
