--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-menu side="start" menuId="first">
+  <ion-menu side="start" menuId="first" contentId="main-menu">
     <ion-header>
       <ion-toolbar color="primary">
         <ion-title>Super Lend App</ion-title>
@@ -14,5 +14,5 @@
     </ion-content>
   </ion-menu>
 
-  <ion-router-outlet main></ion-router-outlet>
+  <ion-router-outlet id="main-menu"></ion-router-outlet>
 </ion-app>
