--- a/src/app/pages/book-list/book-list.page.html
+++ b/src/app/pages/book-list/book-list.page.html
@@ -16,8 +16,8 @@
       <ion-label>
         <h2>
           {{ book.name }}
-          <ion-badge [color]="book.lent ? 'danger' : 'success'">
-            {{ book.lent ? 'prêté' : 'dispo' }}
+          <ion-badge [color]="book.borrower !== null ? 'danger' : 'success'">
+            {{ book.borrower !== null ? 'prêté à "' + book.borrower + '"' : 'dispo' }}
           </ion-badge>
         </h2>
         <h3>{{ book.editor }}</h3>
