--- a/src/app/pages/cd-list/cd-list.page.html
+++ b/src/app/pages/cd-list/cd-list.page.html
@@ -16,8 +16,8 @@
       <ion-label>
         <h2>
           {{ cd.name }}
-          <ion-badge [color]="cd.lent ? 'danger' : 'success'">
-            {{ cd.lent ? 'prêté' : 'dispo' }}
+          <ion-badge [color]="cd.borrower !== null ? 'danger' : 'success'">
+            {{ cd.borrower !== null ? 'prêté à "' + cd.borrower + '"' : 'dispo' }}
           </ion-badge>
         </h2>
         <h3>{{ cd.artist }}</h3>
